Make it compile

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 noinst_LIBRARIES=libsdl_item.a
-libsdl_item_a_SOURCES=sdl.c item.c anim.c
+libsdl_item_a_SOURCES=sdl.c item.c anim.c mutex.c
 
 AV_LIB=-lavcodec -lavformat -lswscale
 SDL_LIB=`sdl2-config --libs`
@@ -7,4 +7,4 @@ SDL_LIB=`sdl2-config --libs`
 libsdl_item_a_LIBADD=$(ADD_LIB)
 libsdl_item_a_CFLAGS=$(AM_CFLAGS)
 
-dist_noinst_HEADERS = sdl.h item.h anim.h
+dist_noinst_HEADERS = sdl.h item.h anim.h mutex.h
