--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,16 @@
 *.i*86
 *.x86_64
 *.hex
+
+.deps
+INSTALL
+Makefile
+Makefile.in
+aclocal.m4
+autom4te.cache
+config.h
+config.h.in
+config.log
+config.status
+configure
+stamp-h1
