--- a/configure.ac
+++ b/configure.ac
@@ -49,6 +49,7 @@ dnl PKG_CHECK_MODULES(LIBAVFILTER, [libavfilter >= 2.15.0])
 PKG_CHECK_MODULES(LIBSWSCALE, [libswscale >= 2.1.0])
 PKG_CHECK_MODULES(LIBSDL2_TTF, [SDL2_ttf >= 2.0.12])
 PKG_CHECK_MODULES(LIBPNG, [libpng])
+PKG_CHECK_MODULES(LIBZIP, [libzip])
 
 CFLAGS+=" $SDL2_CFLAGS"
 CFLAGS+="$LIBAVFORMAT_CFLAGS"
@@ -57,6 +58,7 @@ CFLAGS+="$LIBSWSCALE_CFLAGS"
 CFLAGS+="$LIBSDL2_TTF_CFLAGS"
 CFLAGS+="$LIBAVUTIL_CFLAGS"
 CFLAGS+="$LIBPNG_CFLAGS"
+CFLAGS+="$LIBZIP_CFLAGS"
 
 ADD_LIB="$SDL2_LIBS"
 ADD_LIB+="$LIBAVFORMAT_LIBS"
@@ -65,6 +67,7 @@ ADD_LIB+="$LIBSWSCALE_LIBS"
 ADD_LIB+="$LIBSDL2_TTF_LIBS"
 ADD_LIB+="$LIBAVUTIL_LIBS"
 ADD_LIB+="$LIBPNG_LIBS"
+ADD_LIB+="$LIBZIP_LIBS"
 ADD_LIB+="-lgif"
 
 AC_SUBST(SET_MAKE)
